crates/uitest/fixtures/ty_check/trait_const_assumption_arg_mismatch.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/trait_const_assumption_arg_mismatch.fe
---
error[6-0003]: trait bound is not satisfied
   ┌─ trait_const_assumption_arg_mismatch.fe:12:42
   │
12 │     let _: Slot<{ <T as HasN<2>>::C }> = todo()
   │                                          ^^^^^^ `T` doesn't implement `HasN<2>`
